tests/cases/scc/error/0020-storage4.c
//!necc-dbg @ -as

func4(int par)
{
    static register f;

	return f+par;
}


